[gd_scene load_steps=4 format=3 uid="uid://bw7s8jxs3oihv"]

[ext_resource type="Script" path="res://engine/tile_level/p_scenes/rendered_tile/rendered_tile.gd" id="1_0e00g"]
[ext_resource type="Texture2D" uid="uid://f5lsng1agvpx" path="res://engine/tile_level/assets/Snow/Snow5.png" id="2_db4uc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a0ent"]
radius = 32.0156

[node name="RenderedTile" type="Node2D"]
script = ExtResource("1_0e00g")

[node name="bg_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_db4uc")
centered = false

[node name="infra_sprite" type="Sprite2D" parent="."]
visible = false
centered = false

[node name="building_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
centered = false

[node name="occupant_sprite" type="Sprite2D" parent="."]
visible = false
centered = false

[node name="effect_sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_db4uc")
centered = false

[node name="hover_area" type="Area2D" parent="."]

[node name="hover_collider" type="CollisionShape2D" parent="hover_area"]
position = Vector2(36, 36)
shape = SubResource("CircleShape2D_a0ent")

[node name="xy_coords" type="RichTextLabel" parent="."]
offset_left = 11.0
offset_top = 20.0
offset_right = 62.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "0 , 0"

[connection signal="input_event" from="hover_area" to="." method="_on_hover_area_input_event"]
[connection signal="mouse_entered" from="hover_area" to="." method="custom_hover_enter"]
[connection signal="mouse_exited" from="hover_area" to="." method="custom_hover_exit"]
